--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('PLACEHOLDER-HEADER.jpg');
+      --header-img-url: url('84.jpg');
     }
 
     *{box-sizing:border-box}
