--- a/color.html
+++ b/color.html
@@ -103,7 +103,7 @@
       <div class="logo">DE</div>
       <div>
         <h1>Diseño Editorial</h1>
-        <p class="muted">Formato · Tipografía · Retícula</p>
+        <p class="muted"></p>
       </div>
     </div>
 
