--- a/cubierta.html
+++ b/cubierta.html
@@ -90,7 +90,7 @@
         <div class="logo">DE</div>
         <div>
           <h1>Diseño Editorial</h1>
-          <p class="muted">Formato · Tipografía · Retícula</p>
+          <p class="muted"></p>
         </div>
         <button class="mobile-toggle" id="openSidebar" aria-label="Abrir menú" title="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
       </div>
