--- a/formato.html
+++ b/formato.html
@@ -90,7 +90,7 @@
       <div class="logo">DE</div>
       <div>
         <h1>Diseño Editorial</h1>
-        <p class="muted">Formato · Tipografía · Retícula</p>
+        <p class="muted"></p>
       </div>
       <button class="mobile-toggle" aria-label="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
     </div>
