--- a/index.html
+++ b/index.html
@@ -184,8 +184,12 @@
     </header>
 
     <section class="container">
-      <h3 style="color:var(--accent);margin-top:0">Introducción</h3>
-      <p class="muted">Este repositorio recoge buenas prácticas...</p>
+      <h3 style="color:var(--accent);margin-top:0"></h3>
+      <p class="muted">El diseño editorial es la disciplina que convierte la información en una experiencia legible, ordenada y visualmente significativa. A través de un equilibrio entre forma y función, busca guiar la lectura, reforzar el contenido y construir una identidad gráfica coherente. Cada decisión visual —desde el tamaño de la página hasta la elección del color— contribuye a que un lector permanezca, comprenda y disfrute lo que tiene frente a sí.
+
+Dentro de este proceso, el formato establece el punto de partida al definir las dimensiones, proporciones y orientación del documento, condicionando la relación entre los elementos visuales y el espacio disponible. La tipografía aporta el tono y la voz del contenido, siendo clave para la legibilidad, la personalidad del texto y la jerarquía informativa. La retícula organiza el diseño y aporta estructura, permitiendo ordenar imágenes y textos de forma clara y consistente. El color agrega significado emocional y funcional, ayuda a jerarquizar, dirige la atención y construye identidad. La cubierta o portada actúa como la primera impresión de una obra, sintetizando su esencia y atrayendo al lector con un mensaje visual preciso. El uso de imágenes complementa y potencia la narrativa visual, equilibrando lo textual con recursos gráficos que aportan claridad o emoción. Finalmente, el proceso de maquetación integra cada una de estas decisiones en un flujo de trabajo ordenado y profesional, garantizando un resultado final coherente, estético y técnicamente correcto.
+
+En conjunto, estas siete áreas conforman el núcleo del diseño editorial y permiten transformar contenido en comunicación efectiva, capaz de informar, persuadir y cautivar.</p>
 
       <div class="grid">
         <article class="card">
