--- a/index.html
+++ b/index.html
@@ -185,11 +185,18 @@
 
     <section class="container">
       <h3 style="color:var(--accent);margin-top:0"></h3>
-      <p class="muted">El diseño editorial es la disciplina que convierte la información en una experiencia legible, ordenada y visualmente significativa. A través de un equilibrio entre forma y función, busca guiar la lectura, reforzar el contenido y construir una identidad gráfica coherente. Cada decisión visual —desde el tamaño de la página hasta la elección del color— contribuye a que un lector permanezca, comprenda y disfrute lo que tiene frente a sí.
+      <p style="text-align: justify;">
+El <strong>diseño editorial</strong> es una disciplina que articula contenido, estructura visual y experiencia de lectura. A través de principios técnicos y estéticos, transforma la información en objetos gráficos claros, funcionales y coherentes. Su importancia radica en la capacidad de organizar, jerarquizar y comunicar ideas de manera efectiva, integrando forma y significado.
+</p>
 
-Dentro de este proceso, el formato establece el punto de partida al definir las dimensiones, proporciones y orientación del documento, condicionando la relación entre los elementos visuales y el espacio disponible. La tipografía aporta el tono y la voz del contenido, siendo clave para la legibilidad, la personalidad del texto y la jerarquía informativa. La retícula organiza el diseño y aporta estructura, permitiendo ordenar imágenes y textos de forma clara y consistente. El color agrega significado emocional y funcional, ayuda a jerarquizar, dirige la atención y construye identidad. La cubierta o portada actúa como la primera impresión de una obra, sintetizando su esencia y atrayendo al lector con un mensaje visual preciso. El uso de imágenes complementa y potencia la narrativa visual, equilibrando lo textual con recursos gráficos que aportan claridad o emoción. Finalmente, el proceso de maquetación integra cada una de estas decisiones en un flujo de trabajo ordenado y profesional, garantizando un resultado final coherente, estético y técnicamente correcto.
+<p style="text-align: justify;">
+En este proyecto se abordan siete ejes fundamentales que conforman la práctica editorial y permiten comprender la lógica interna de cualquier publicación. El <strong>Formato</strong> define las dimensiones y proporciones de una obra, determinando cómo se experimenta físicamente. La <strong>Tipografía</strong> organiza el texto y establece la voz visual del contenido. La <strong>Retícula</strong> funciona como el esqueleto que ordena todos los elementos gráficos, asegurando consistencia. El <strong>Color</strong> aporta intención, énfasis y identidad, influyendo en la percepción y la lectura.
+</p>
 
-En conjunto, estas siete áreas conforman el núcleo del diseño editorial y permiten transformar contenido en comunicación efectiva, capaz de informar, persuadir y cautivar.</p>
+<p style="text-align: justify;">
+La <strong>Cubierta o portada</strong> actúa como introducción visual, genera expectativa y comunica el espíritu del material. El <strong>Uso de imágenes</strong> complementa y enriquece el discurso, creando ritmo y reforzando significados. Finalmente, el <strong>Proceso de maquetación</strong> integra todos estos componentes en decisiones editoriales que aseguran armonía, claridad y profesionalismo en el resultado final.
+</p>
+
 
       <div class="grid">
         <article class="card">
