--- a/tipografia.html
+++ b/tipografia.html
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('PLACEHOLDER-TIPOGRAFIA.jpg');
+      --header-img-url: url('113.jpg');
     }
 
     *{box-sizing:border-box}
