--- a/formato.html
+++ b/formato.html
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('111.jpg');
+      --header-img-url: url('111.jpeg');
     }
 
     *{box-sizing:border-box}
