--- a/color.html
+++ b/color.html
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('imgs/header-color.jpg');
+      --header-img-url: url('121.jpg');
     }
 
     *{box-sizing:border-box}
