--- a/imagenes.html
+++ b/imagenes.html
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('headers/imagenes.jpg');
+      --header-img-url: url('125.jpg');
     }
 
     *{box-sizing:border-box}
