--- a/formato.html
+++ b/formato.html
@@ -151,29 +151,85 @@
       </div>
     </header>
 
-    <section class="container">
-      <h2>Conceptos básicos del formato editorial</h2>
-      <p class="muted">
-        El formato define las dimensiones y proporciones del documento. Afecta la legibilidad, el flujo de lectura y la percepción estética del contenido.
-      </p>
+<section class="container">
 
-      <div class="grid">
-        <div class="card">
-          <h3>Tamaños estándar</h3>
-          <p>Formatos como carta, A4, A5, y tamaños comerciales para libros y revistas.</p>
-        </div>
+  <h2>¿Qué es el formato editorial?</h2>
+  <p>
+    El <strong>formato editorial</strong> es el tamaño y la proporción física de una publicación. 
+    En secundaria lo vemos todos los días sin darnos cuenta: cuadernos tamaño carta, 
+    libros más pequeños que caben en la mochila, o revistas grandes y llamativas. 
+    Elegir un formato no es sólo una decisión estética: afecta la forma en que leemos, 
+    cómo se acomoda el texto y qué sensación transmite el contenido.
+  </p>
 
-        <div class="card">
-          <h3>Márgenes y caja tipográfica</h3>
-          <p>Relación entre el área útil y el espacio negativo en la página.</p>
-        </div>
+  <!-- ==== ESPACIO PARA IMAGEN 1 ==== -->
+  <div style="margin: 28px 0; text-align:center;">
+    <img src="144.jpg" alt="Ejemplo de distintos formatos editoriales" style="max-width:100%; border-radius:12px;">
+    <p style="color:var(--muted); font-size:14px;">Ejemplo de diferentes tamaños de libros.</p>
+  </div>
 
-        <div class="card">
-          <h3>Proporciones</h3>
-          <p>Aplicación de sistemas como la proporción áurea o series modulares A, B y C.</p>
-        </div>
-      </div>
-    </section>
+  <h2>¿Por qué el formato es importante?</h2>
+  <p>
+    Un formato grande permite mostrar fotografías o ilustraciones con mayor detalle, 
+    mientras que un formato pequeño facilita la portabilidad. 
+    Por ejemplo, una revista de arte suele ser amplia para apreciar imágenes, 
+    mientras que una novela suele ser compacta para poder leerse en cualquier lugar. 
+    El formato también influye en la cantidad de texto por página y en la forma en la que el lector 
+    recorre la información.
+  </p>
+
+  <!-- ==== ESPACIO PARA IMAGEN 2 ==== -->
+  <div style="margin: 28px 0; text-align:center;">
+    <img src="145.jpg" alt="Comparación de formatos grandes y pequeños" style="max-width:100%; border-radius:12px;">
+    <p style="color:var(--muted); font-size:14px;">Comparación entre formato pequeño y formato grande.</p>
+  </div>
+
+  <h2>Ejemplos cotidianos</h2>
+  <p>
+    Piensa en un libro de texto de secundaria: generalmente es tamaño carta o ligeramente más pequeño. 
+    Esto permite incluir diagramas, tablas y lecturas sin que las páginas se sientan saturadas.  
+    Por otro lado, los cuentos infantiles tienden a ser cuadrados o más anchos porque funcionan mejor 
+    con ilustraciones grandes.
+  </p>
+
+  <!-- ==== EMBED DE VIDEO DE YOUTUBE ==== -->
+  <div style="margin: 32px 0; text-align:center;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/J6UlPJk3jlo?si=A1jJxE0_FBFIdps6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p style="color:var(--muted); font-size:14px;">Video recomendado: ¿Cómo elegir un formato para una publicación?</p>
+  </div>
+
+  <h2>Cómo se elige el formato</h2>
+  <p>
+    Para decidir el formato adecuado, los diseñadores consideran factores como la función del proyecto, 
+    el público, el tipo de contenido y el costo de impresión. Por ejemplo, imprimir un libro muy grande 
+    puede ser más caro y menos práctico, mientras que un formato pequeño reduce costos pero limita el área útil.
+  </p>
+
+  <!-- ==== ESPACIO PARA IMAGEN 3 ==== -->
+  <div style="margin: 28px 0; text-align:center;">
+    <img src="146.jpg" alt="Proceso de selección del formato editorial" style="max-width:100%; border-radius:12px;">
+    <p style="color:var(--muted); font-size:14px;">Decisiones al seleccionar un formato.</p>
+  </div>
+
+  <h2>Documento de consulta</h2>
+  <p>
+    A continuación puedes revisar un PDF con ejemplos reales de formatos editoriales usados en libros, 
+    revistas y folletos.
+  </p>
+
+  <!-- ==== PDF EMBEBIDO DESDE GITHUB ==== -->
+  <div style="margin: 32px 0;">
+    <iframe 
+      src="4formato.pdf" 
+      width="100%" 
+      height="500" 
+      style="border:1px solid var(--border); border-radius:12px;">
+    </iframe>
+    <p style="color:var(--muted); font-size:14px;">PDF: Ejemplos de formatos editoriales.</p>
+  </div>
+
+</section>
+
 
     <footer>
       © 2025 — Diseño Editorial
