--- a/formato.html
+++ b/formato.html
@@ -64,7 +64,7 @@
     .hero .title{font-size:28px;margin:0;color:var(--accent)}
     .hero .subtitle{color:var(--muted);margin-top:6px}
 
-    .container{padding:80px 120px
+    .container{padding:36px 60px
                text-align: justify}
 
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
@@ -155,7 +155,7 @@
 <section class="container">
 
   <h2>¿Qué es el formato editorial?</h2>
-  <p>
+  <p class="muted">
     El <strong>formato editorial</strong> es el tamaño y la proporción física de una publicación. 
     En secundaria lo vemos todos los días sin darnos cuenta: cuadernos tamaño carta, 
     libros más pequeños que caben en la mochila, o revistas grandes y llamativas. 
