--- a/formato.html
+++ b/formato.html
@@ -153,9 +153,11 @@
     </header>
 
 <section class="container">
-
+<h3 style="color:var(--accent);margin-top:0"></h3>
+      <p style="text-align: justify;">
+        
   <h2>¿Qué es el formato editorial?</h2>
-  <p class="muted">
+  <p>
     El <strong>formato editorial</strong> es el tamaño y la proporción física de una publicación. 
     En secundaria lo vemos todos los días sin darnos cuenta: cuadernos tamaño carta, 
     libros más pequeños que caben en la mochila, o revistas grandes y llamativas. 
