--- a/formato.html
+++ b/formato.html
@@ -157,7 +157,7 @@
       <p style="text-align: justify;">
         
   <h2>¿Qué es el formato editorial?</h2>
-  <p>
+  <p style="text-align: justify;">
     El <strong>formato editorial</strong> es el tamaño y la proporción física de una publicación. 
     En secundaria lo vemos todos los días sin darnos cuenta: cuadernos tamaño carta, 
     libros más pequeños que caben en la mochila, o revistas grandes y llamativas. 
@@ -172,7 +172,7 @@
   </div>
 
   <h2>¿Por qué el formato es importante?</h2>
-  <p>
+  <p style="text-align: justify;">
     Un formato grande permite mostrar fotografías o ilustraciones con mayor detalle, 
     mientras que un formato pequeño facilita la portabilidad. 
     Por ejemplo, una revista de arte suele ser amplia para apreciar imágenes, 
@@ -188,7 +188,7 @@
   </div>
 
   <h2>Ejemplos cotidianos</h2>
-  <p>
+  <p style="text-align: justify;">
     Piensa en un libro de texto de secundaria: generalmente es tamaño carta o ligeramente más pequeño. 
     Esto permite incluir diagramas, tablas y lecturas sin que las páginas se sientan saturadas.  
     Por otro lado, los cuentos infantiles tienden a ser cuadrados o más anchos porque funcionan mejor 
@@ -202,7 +202,7 @@
   </div>
 
   <h2>Cómo se elige el formato</h2>
-  <p>
+  <p style="text-align: justify;">
     Para decidir el formato adecuado, los diseñadores consideran factores como la función del proyecto, 
     el público, el tipo de contenido y el costo de impresión. Por ejemplo, imprimir un libro muy grande 
     puede ser más caro y menos práctico, mientras que un formato pequeño reduce costos pero limita el área útil.
