--- a/formato.html
+++ b/formato.html
@@ -154,10 +154,10 @@
 
 <section class="container">
 <h3 style="color:var(--accent);margin-top:0"></h3>
-      <p style="text-align: justify;">
+     
         
   <h2>¿Qué es el formato editorial?</h2>
-  <p style="text-align: justify;">
+  <p class="muted">
     El <strong>formato editorial</strong> es el tamaño y la proporción física de una publicación. 
     En secundaria lo vemos todos los días sin darnos cuenta: cuadernos tamaño carta, 
     libros más pequeños que caben en la mochila, o revistas grandes y llamativas. 
@@ -172,7 +172,7 @@
   </div>
 
   <h2>¿Por qué el formato es importante?</h2>
-  <p style="text-align: justify;">
+   <p class="muted">
     Un formato grande permite mostrar fotografías o ilustraciones con mayor detalle, 
     mientras que un formato pequeño facilita la portabilidad. 
     Por ejemplo, una revista de arte suele ser amplia para apreciar imágenes, 
@@ -188,7 +188,7 @@
   </div>
 
   <h2>Ejemplos cotidianos</h2>
-  <p style="text-align: justify;">
+   <p class="muted">
     Piensa en un libro de texto de secundaria: generalmente es tamaño carta o ligeramente más pequeño. 
     Esto permite incluir diagramas, tablas y lecturas sin que las páginas se sientan saturadas.  
     Por otro lado, los cuentos infantiles tienden a ser cuadrados o más anchos porque funcionan mejor 
@@ -202,7 +202,7 @@
   </div>
 
   <h2>Cómo se elige el formato</h2>
-  <p style="text-align: justify;">
+ <p class="muted">
     Para decidir el formato adecuado, los diseñadores consideran factores como la función del proyecto, 
     el público, el tipo de contenido y el costo de impresión. Por ejemplo, imprimir un libro muy grande 
     puede ser más caro y menos práctico, mientras que un formato pequeño reduce costos pero limita el área útil.
@@ -215,7 +215,7 @@
   </div>
 
   <h2>Documento de consulta</h2>
-  <p>
+ <p class="muted">
     A continuación puedes revisar un PDF con ejemplos reales de formatos editoriales usados en libros, 
     revistas y folletos.
   </p>
