--- a/formato.html
+++ b/formato.html
@@ -19,6 +19,7 @@
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
       --header-img-url: url('111.jpeg');
+    
     }
 
     *{box-sizing:border-box}
@@ -64,8 +65,13 @@
     .hero .title{font-size:28px;margin:0;color:var(--accent)}
     .hero .subtitle{color:var(--muted);margin-top:6px}
 
-    .container{padding:36px 60px
-               text-align: justify}
+    .container{
+  padding: 36px 60px;
+  text-align: justify;
+  max-width: 820px;
+  margin: 0 auto;
+}
+
 
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     .card{background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.005));padding:18px;border-radius:12px;border:1px solid var(--border)}
