--- a/formato.html
+++ b/formato.html
@@ -85,6 +85,43 @@
       .mobile-toggle{display:inline-flex}
       main{margin-left:0}
     }
+
+    /* === ZOOM DE IMÁGENES (MODAL) === */
+.img-zoomable {
+  cursor: zoom-in;
+  transition: transform 0.25s ease;
+}
+
+#img-modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  padding: 20px;
+}
+
+#img-modal img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 12px;
+}
+
+#img-modal.active {
+  display: flex;
+}
+
+#img-modal-close {
+  position: fixed;
+  top: 20px;
+  right: 30px;
+  font-size: 32px;
+  color: white;
+  cursor: pointer;
+}
+
   </style>
 </head>
 
@@ -173,7 +210,7 @@
 
   <!-- ==== ESPACIO PARA IMAGEN 1 ==== -->
   <div style="margin: 28px 0; text-align:center;">
-    <img src="144.jpg" alt="Ejemplo de distintos formatos editoriales" style="max-width:100%; border-radius:12px;">
+    <img src="144.jpg" class="img-zoomable" alt="Ejemplo de distintos formatos editoriales" style="max-width:100%; border-radius:12px;">
     <p style="color:var(--muted); font-size:14px;">Ejemplo de diferentes tamaños de libros.</p>
   </div>
 
@@ -189,7 +226,7 @@
 
   <!-- ==== ESPACIO PARA IMAGEN 2 ==== -->
   <div style="margin: 28px 0; text-align:center;">
-    <img src="145.jpg" alt="Comparación de formatos grandes y pequeños" style="max-width:100%; border-radius:12px;">
+    <img src="145.jpg" class="img-zoomable" alt="Comparación de formatos grandes y pequeños" style="max-width:100%; border-radius:12px;">
     <p style="color:var(--muted); font-size:14px;">Comparación entre formato pequeño y formato grande.</p>
   </div>
 
@@ -216,7 +253,7 @@
 
   <!-- ==== ESPACIO PARA IMAGEN 3 ==== -->
   <div style="margin: 28px 0; text-align:center;">
-    <img src="146.jpg" alt="Proceso de selección del formato editorial" style="max-width:100%; border-radius:12px;">
+    <img src="146.jpg" class="img-zoomable" alt="Proceso de selección del formato editorial" style="max-width:100%; border-radius:12px;">
     <p style="color:var(--muted); font-size:14px;">Decisiones al seleccionar un formato.</p>
   </div>
 
@@ -246,5 +283,32 @@
 
   </main>
 </div>
+
+  <!-- MODAL DE IMAGEN -->
+<div id="img-modal">
+  <span id="img-modal-close">✕</span>
+  <img id="img-modal-content" src="">
+</div>
+<script>
+  document.querySelectorAll('.img-zoomable').forEach(img => {
+    img.addEventListener('click', () => {
+      const modal = document.getElementById('img-modal');
+      const modalImg = document.getElementById('img-modal-content');
+      modal.classList.add('active');
+      modalImg.src = img.src;
+    });
+  });
+
+  document.getElementById('img-modal-close').addEventListener('click', () => {
+    document.getElementById('img-modal').classList.remove('active');
+  });
+
+  document.getElementById('img-modal').addEventListener('click', (e) => {
+    if (e.target.id === 'img-modal') {
+      document.getElementById('img-modal').classList.remove('active');
+    }
+  });
+</script>
+
 </body>
 </html>
