--- a/imagenes.html
+++ b/imagenes.html
@@ -63,7 +63,13 @@
     .hero .title{font-size:28px;margin:0;color:var(--accent)}
     .hero .subtitle{color:var(--muted);margin-top:6px}
 
-    .container{padding:36px 60px}
+    .container{
+  padding: 36px 60px;
+  text-align: justify;
+  max-width: 820px;
+  margin: 0 auto;
+}
+
 
     footer{padding:24px 60px;border-top:1px solid var(--border);color:var(--muted)}
 
