--- a/reticula.html
+++ b/reticula.html
@@ -66,7 +66,13 @@
     .hero .title{font-size:28px;margin:0;color:var(--accent)}
     .hero .subtitle{color:var(--muted);margin-top:6px}
 
-    .container{padding:36px 60px;line-height:1.65}
+    .container{
+  padding: 36px 60px;
+  text-align: justify;
+  max-width: 820px;
+  margin: 0 auto;
+}
+
 
     .container h2{margin-top:32px;color:var(--accent)}
     .container p{color:var(--muted)}
