--- a/tipografia.html
+++ b/tipografia.html
@@ -199,7 +199,7 @@
 
 <!-- ==== IMAGEN 3 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="153.jpg" class="img-zoomable" alt="Comparación entre serif, sans serif y manuscritas" style="max-width:100%; border-radius:12px; cursor:zoom-in;">
+  <img src="153.png" class="img-zoomable" alt="Comparación entre serif, sans serif y manuscritas" style="max-width:100%; border-radius:12px; cursor:zoom-in;">
   <p style="color:var(--muted); font-size:14px;">Serif, Sans Serif y Manuscritas: tres estilos fundamentales.</p>
 </div>
 
